# qstream

./: .gitignore  FINDINGS.md  README.md  TODO.md  corpus.txt  pyproject.toml
evals/: README.md  eval_gpqa.py  eval_gsm8k.py  eval_mmlu.py  eval_ppl.py
qstream/: __init__.py  calibrate.py  core.py  fp8.py  gamma.py  handlers.py  output.py  shard.py
quant4/: __init__.py  calibrate.py  core.py  fp8.py  gamma.py  handlers.py  shard.py
scripts/: analyze_quant_error.py  calibrate.py  eval_gsm8k.py  eval_ppl.py  quantize.py
templates/: MODEL_CARD_TEMPLATE.md
tests/: test_core.py  test_fp8.py  test_gamma.py  test_handlers.py  test_mxfp8.py  test_mxfp8_shard.py  test_output.py  test_shard.py
